--- a/ATUReports/Results/ConsolidatedPage.html
+++ b/ATUReports/Results/ConsolidatedPage.html
@@ -107,7 +107,16 @@
  <li class="menuStyle"><a href="Run_16\CurrentRun.html" >Run 16 </a></li>
 
 
- <li style="padding-top: 4px;padding-bottom: 4px;"><a href="Run_17\CurrentRun.html" >Run 17 </a></li>
+ <li class="menuStyle"><a href="Run_17\CurrentRun.html" >Run 17 </a></li>
+
+
+ <li class="menuStyle"><a href="Run_18\CurrentRun.html" >Run 18 </a></li>
+
+
+ <li class="menuStyle"><a href="Run_19\CurrentRun.html" >Run 19 </a></li>
+
+
+ <li style="padding-top: 4px;padding-bottom: 4px;"><a href="Run_20\CurrentRun.html" >Run 20 </a></li>
 
 
                     </ul>
