--- a/test-output/old/Suite/reporter-output.html
+++ b/test-output/old/Suite/reporter-output.html
@@ -104,4 +104,7 @@
 <tr><td>STEP104</td></tr>
 <tr><td>STEP105</td></tr>
 <tr><td>STEP106</td></tr>
+<tr><td>STEP107</td></tr>
+<tr><td>STEP108</td></tr>
+<tr><td>STEP109</td></tr>
 </table>
