--- a/ATUReports/Results/Run_8/CurrentRun.html
+++ b/ATUReports/Results/Run_8/CurrentRun.html
@@ -80,7 +80,7 @@ if($(this).val()=='tests'){ $('.pass').show(); $('.fail').show(); $('.skip').sho
 <td id="content">
                     <div class="info">
                         The following pie chart demonstrates the percentage of Passed, Failed and Skipped Test Cases<br/>
-                        Time Taken for Executing below Test Cases: <b>80 Sec</b> <br/>
+                        Time Taken for Executing below Test Cases: <b>233 Sec</b> <br/>
                         Current Run Number: <b>Run 8</b>
                     </div>
 <div class="info"><br/><b>Run Description</b><br/><br/>Here you can give description about the current Run</div>                    <div>
@@ -90,7 +90,7 @@ if($(this).val()=='tests'){ $('.pass').show(); $('.fail').show(); $('.skip').sho
                             <tr>
                                 <td>Execution Date</td>
                                 <td>&nbsp;&nbsp;:&nbsp;&nbsp;</td>
-                                <td>12-Jul-2017 11:30:24</td>
+                                <td>17-Jul-2017 02:27:28</td>
                             </tr>
                             <tr>
                                 <td>Total Test Cases</td>
@@ -148,43 +148,43 @@ if($(this).val()=='tests'){ $('.pass').show(); $('.fail').show(); $('.skip').sho
                             </tr>
 
                             <tr class="all pass atuSuiteNameMapper1">
-                                <td><a href="Default suite\Default test\BatchExecution\UpdateVirtualMachine_Delete\cNetLoginScenario_Iteration1\cNetLoginScenario.html">Default suite</a></td>
-                                <td><a href="Default suite\Default test\BatchExecution\UpdateVirtualMachine_Delete\cNetLoginScenario_Iteration1\cNetLoginScenario.html">BatchExecution</a></td>
-                                <td><a href="Default suite\Default test\BatchExecution\UpdateVirtualMachine_Delete\cNetLoginScenario_Iteration1\cNetLoginScenario.html">UpdateVirtualMachine_Delete</a></td>
-                                <td><a href="Default suite\Default test\BatchExecution\UpdateVirtualMachine_Delete\cNetLoginScenario_Iteration1\cNetLoginScenario.html">Test Method</a></td>
-                                <td><a href="Default suite\Default test\BatchExecution\UpdateVirtualMachine_Delete\cNetLoginScenario_Iteration1\cNetLoginScenario.html">cNetLoginScenario</a></td>
-                                <td><a href="Default suite\Default test\BatchExecution\UpdateVirtualMachine_Delete\cNetLoginScenario_Iteration1\cNetLoginScenario.html">1</a></td>
-                                <td><a href="Default suite\Default test\BatchExecution\UpdateVirtualMachine_Delete\cNetLoginScenario_Iteration1\cNetLoginScenario.html">7 Sec</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\cNetLoginScenario_Iteration1\cNetLoginScenario.html">Default suite</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\cNetLoginScenario_Iteration1\cNetLoginScenario.html">BatchExecution</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\cNetLoginScenario_Iteration1\cNetLoginScenario.html">UpdateVMScenario</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\cNetLoginScenario_Iteration1\cNetLoginScenario.html">Test Method</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\cNetLoginScenario_Iteration1\cNetLoginScenario.html">cNetLoginScenario</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\cNetLoginScenario_Iteration1\cNetLoginScenario.html">1</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\cNetLoginScenario_Iteration1\cNetLoginScenario.html">10 Sec</a></td>
                                 <td><img  style="border: none; width: 25px" src="../../HTML_Design_Files/IMG/pass.png"></td>
                             </tr>
                             <tr class="all pass atuSuiteNameMapper1">
-                                <td><a href="Default suite\Default test\BatchExecution\UpdateVirtualMachine_Delete\UpdateVirtualMachine_Iteration1\UpdateVM_Delete.html">Default suite</a></td>
-                                <td><a href="Default suite\Default test\BatchExecution\UpdateVirtualMachine_Delete\UpdateVirtualMachine_Iteration1\UpdateVM_Delete.html">BatchExecution</a></td>
-                                <td><a href="Default suite\Default test\BatchExecution\UpdateVirtualMachine_Delete\UpdateVirtualMachine_Iteration1\UpdateVM_Delete.html">UpdateVirtualMachine_Delete</a></td>
-                                <td><a href="Default suite\Default test\BatchExecution\UpdateVirtualMachine_Delete\UpdateVirtualMachine_Iteration1\UpdateVM_Delete.html">Test Method</a></td>
-                                <td><a href="Default suite\Default test\BatchExecution\UpdateVirtualMachine_Delete\UpdateVirtualMachine_Iteration1\UpdateVM_Delete.html">UpdateVM_Delete</a></td>
-                                <td><a href="Default suite\Default test\BatchExecution\UpdateVirtualMachine_Delete\UpdateVirtualMachine_Iteration1\UpdateVM_Delete.html">1</a></td>
-                                <td><a href="Default suite\Default test\BatchExecution\UpdateVirtualMachine_Delete\UpdateVirtualMachine_Iteration1\UpdateVM_Delete.html">36 Sec</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration1\UpdateVM_Dallas_OpenStack_Dev59.html">Default suite</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration1\UpdateVM_Dallas_OpenStack_Dev59.html">BatchExecution</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration1\UpdateVM_Dallas_OpenStack_Dev59.html">UpdateVMScenario</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration1\UpdateVM_Dallas_OpenStack_Dev59.html">Test Method</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration1\UpdateVM_Dallas_OpenStack_Dev59.html">UpdateVM_Dallas_OpenStack_Dev59</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration1\UpdateVM_Dallas_OpenStack_Dev59.html">1</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration1\UpdateVM_Dallas_OpenStack_Dev59.html">111 Sec</a></td>
                                 <td><img  style="border: none; width: 25px" src="../../HTML_Design_Files/IMG/pass.png"></td>
                             </tr>
                             <tr class="all pass atuSuiteNameMapper1">
-                                <td><a href="Default suite\Default test\BatchExecution\UpdateVirtualMachine_Delete\UpdateVirtualMachine_Iteration2\UpdateVM_Delete.html">Default suite</a></td>
-                                <td><a href="Default suite\Default test\BatchExecution\UpdateVirtualMachine_Delete\UpdateVirtualMachine_Iteration2\UpdateVM_Delete.html">BatchExecution</a></td>
-                                <td><a href="Default suite\Default test\BatchExecution\UpdateVirtualMachine_Delete\UpdateVirtualMachine_Iteration2\UpdateVM_Delete.html">UpdateVirtualMachine_Delete</a></td>
-                                <td><a href="Default suite\Default test\BatchExecution\UpdateVirtualMachine_Delete\UpdateVirtualMachine_Iteration2\UpdateVM_Delete.html">Test Method</a></td>
-                                <td><a href="Default suite\Default test\BatchExecution\UpdateVirtualMachine_Delete\UpdateVirtualMachine_Iteration2\UpdateVM_Delete.html">UpdateVM_Delete</a></td>
-                                <td><a href="Default suite\Default test\BatchExecution\UpdateVirtualMachine_Delete\UpdateVirtualMachine_Iteration2\UpdateVM_Delete.html">2</a></td>
-                                <td><a href="Default suite\Default test\BatchExecution\UpdateVirtualMachine_Delete\UpdateVirtualMachine_Iteration2\UpdateVM_Delete.html">26 Sec</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration2\UpdateVM_Dallas_OpenStack_Prod32.html">Default suite</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration2\UpdateVM_Dallas_OpenStack_Prod32.html">BatchExecution</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration2\UpdateVM_Dallas_OpenStack_Prod32.html">UpdateVMScenario</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration2\UpdateVM_Dallas_OpenStack_Prod32.html">Test Method</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration2\UpdateVM_Dallas_OpenStack_Prod32.html">UpdateVM_Dallas_OpenStack_Prod32</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration2\UpdateVM_Dallas_OpenStack_Prod32.html">2</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration2\UpdateVM_Dallas_OpenStack_Prod32.html">101 Sec</a></td>
                                 <td><img  style="border: none; width: 25px" src="../../HTML_Design_Files/IMG/pass.png"></td>
                             </tr>
                             <tr class="all pass atuSuiteNameMapper1">
-                                <td><a href="Default suite\Default test\BatchExecution\UpdateVirtualMachine_Delete\cNetLogoutScenario_Iteration1\cNetLogoutScenario.html">Default suite</a></td>
-                                <td><a href="Default suite\Default test\BatchExecution\UpdateVirtualMachine_Delete\cNetLogoutScenario_Iteration1\cNetLogoutScenario.html">BatchExecution</a></td>
-                                <td><a href="Default suite\Default test\BatchExecution\UpdateVirtualMachine_Delete\cNetLogoutScenario_Iteration1\cNetLogoutScenario.html">UpdateVirtualMachine_Delete</a></td>
-                                <td><a href="Default suite\Default test\BatchExecution\UpdateVirtualMachine_Delete\cNetLogoutScenario_Iteration1\cNetLogoutScenario.html">Test Method</a></td>
-                                <td><a href="Default suite\Default test\BatchExecution\UpdateVirtualMachine_Delete\cNetLogoutScenario_Iteration1\cNetLogoutScenario.html">cNetLogoutScenario</a></td>
-                                <td><a href="Default suite\Default test\BatchExecution\UpdateVirtualMachine_Delete\cNetLogoutScenario_Iteration1\cNetLogoutScenario.html">1</a></td>
-                                <td><a href="Default suite\Default test\BatchExecution\UpdateVirtualMachine_Delete\cNetLogoutScenario_Iteration1\cNetLogoutScenario.html">2 Sec</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\cNetLogoutScenario_Iteration1\cNetLogoutScenario.html">Default suite</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\cNetLogoutScenario_Iteration1\cNetLogoutScenario.html">BatchExecution</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\cNetLogoutScenario_Iteration1\cNetLogoutScenario.html">UpdateVMScenario</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\cNetLogoutScenario_Iteration1\cNetLogoutScenario.html">Test Method</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\cNetLogoutScenario_Iteration1\cNetLogoutScenario.html">cNetLogoutScenario</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\cNetLogoutScenario_Iteration1\cNetLogoutScenario.html">1</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\cNetLogoutScenario_Iteration1\cNetLogoutScenario.html">3 Sec</a></td>
                                 <td><img  style="border: none; width: 25px" src="../../HTML_Design_Files/IMG/pass.png"></td>
                             </tr>
                         </table>
