--- a/ATUReports/Results/Run_6/CurrentRun.html
+++ b/ATUReports/Results/Run_6/CurrentRun.html
@@ -80,7 +80,7 @@ if($(this).val()=='tests'){ $('.pass').show(); $('.fail').show(); $('.skip').sho
 <td id="content">
                     <div class="info">
                         The following pie chart demonstrates the percentage of Passed, Failed and Skipped Test Cases<br/>
-                        Time Taken for Executing below Test Cases: <b>21 Sec</b> <br/>
+                        Time Taken for Executing below Test Cases: <b>339 Sec</b> <br/>
                         Current Run Number: <b>Run 6</b>
                     </div>
 <div class="info"><br/><b>Run Description</b><br/><br/>Here you can give description about the current Run</div>                    <div>
@@ -90,17 +90,17 @@ if($(this).val()=='tests'){ $('.pass').show(); $('.fail').show(); $('.skip').sho
                             <tr>
                                 <td>Execution Date</td>
                                 <td>&nbsp;&nbsp;:&nbsp;&nbsp;</td>
-                                <td>12-Jul-2017 11:17:09</td>
+                                <td>17-Jul-2017 02:14:02</td>
                             </tr>
                             <tr>
                                 <td>Total Test Cases</td>
                                 <td>&nbsp;&nbsp;:&nbsp;&nbsp;</td>
-                                <td>3</td>
+                                <td>4</td>
                             </tr>
                             <tr>
                                 <td>Passed</td>
                                 <td>&nbsp;&nbsp;:&nbsp;&nbsp;</td>
-                                <td>1</td>
+                                <td>2</td>
                             </tr>
                             
                             <tr>
@@ -148,22 +148,60 @@ if($(this).val()=='tests'){ $('.pass').show(); $('.fail').show(); $('.skip').sho
                             </tr>
 
                             <tr class="all pass atuSuiteNameMapper1">
-                                <td><a href="Default suite\Default test\BatchExecution\Script_Execution_Transpose\cNetLogoutScenario_Iteration1\cNetLogoutScenario.html">Default suite</a></td>
-                                <td><a href="Default suite\Default test\BatchExecution\Script_Execution_Transpose\cNetLogoutScenario_Iteration1\cNetLogoutScenario.html">BatchExecution</a></td>
-                                <td><a href="Default suite\Default test\BatchExecution\Script_Execution_Transpose\cNetLogoutScenario_Iteration1\cNetLogoutScenario.html">Script_Execution_Transpose</a></td>
-                                <td><a href="Default suite\Default test\BatchExecution\Script_Execution_Transpose\cNetLogoutScenario_Iteration1\cNetLogoutScenario.html">Test Method</a></td>
-                                <td><a href="Default suite\Default test\BatchExecution\Script_Execution_Transpose\cNetLogoutScenario_Iteration1\cNetLogoutScenario.html">cNetLogoutScenario</a></td>
-                                <td><a href="Default suite\Default test\BatchExecution\Script_Execution_Transpose\cNetLogoutScenario_Iteration1\cNetLogoutScenario.html">1</a></td>
-                                <td><a href="Default suite\Default test\BatchExecution\Script_Execution_Transpose\cNetLogoutScenario_Iteration1\cNetLogoutScenario.html">67 Milli Sec</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\cNetLoginScenario_Iteration1\cNetLoginScenario.html">Default suite</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\cNetLoginScenario_Iteration1\cNetLoginScenario.html">BatchExecution</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\cNetLoginScenario_Iteration1\cNetLoginScenario.html">UpdateVMScenario</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\cNetLoginScenario_Iteration1\cNetLoginScenario.html">Test Method</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\cNetLoginScenario_Iteration1\cNetLoginScenario.html">cNetLoginScenario</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\cNetLoginScenario_Iteration1\cNetLoginScenario.html">1</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\cNetLoginScenario_Iteration1\cNetLoginScenario.html">13 Sec</a></td>
+                                <td><img  style="border: none; width: 25px" src="../../HTML_Design_Files/IMG/pass.png"></td>
+                            </tr>
+                            <tr class="all pass atuSuiteNameMapper1">
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\cNetLogoutScenario_Iteration1\cNetLogoutScenario.html">Default suite</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\cNetLogoutScenario_Iteration1\cNetLogoutScenario.html">BatchExecution</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\cNetLogoutScenario_Iteration1\cNetLogoutScenario.html">UpdateVMScenario</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\cNetLogoutScenario_Iteration1\cNetLogoutScenario.html">Test Method</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\cNetLogoutScenario_Iteration1\cNetLogoutScenario.html">cNetLogoutScenario</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\cNetLogoutScenario_Iteration1\cNetLogoutScenario.html">1</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\cNetLogoutScenario_Iteration1\cNetLogoutScenario.html">85 Milli Sec</a></td>
                                 <td><img  style="border: none; width: 25px" src="../../HTML_Design_Files/IMG/pass.png"></td>
                             </tr>
                             <tr class="all fail atuSuiteNameMapper1">
-                                <td><a href="Default suite\Default test\BatchExecution\Script_Execution_Transpose\cNetLoginScenario_Iteration1\cNetLoginScenario.html">Default suite</a></td>
-                              <td><a href="Default suite\Default test\BatchExecution\Script_Execution_Transpose\cNetLoginScenario_Iteration1\cNetLoginScenario.html">BatchExecution</a></td>
-                                <td><a href="Default suite\Default test\BatchExecution\Script_Execution_Transpose\cNetLoginScenario_Iteration1\cNetLoginScenario.html">Script_Execution_Transpose</a></td>
-                                <td><a href="Default suite\Default test\BatchExecution\Script_Execution_Transpose\cNetLoginScenario_Iteration1\cNetLoginScenario.html">Test Method</a></td>
-                                <td><a href="Default suite\Default test\BatchExecution\Script_Execution_Transpose\cNetLoginScenario_Iteration1\cNetLoginScenario.html">cNetLoginScenario</a></td>
-                                <td><a href="Default suite\Default test\BatchExecution\Script_Execution_Transpose\cNetLoginScenario_Iteration1\cNetLoginScenario.html">1</a></td>
-                                <td><a href="Default suite\Default test\BatchExecution\Script_Execution_Transpose\cNetLoginScenario_Iteration1\cNetLoginScenario.html">11 Sec</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration1\UpdateVM_Dallas_OpenStack_Dev59.html">Default suite</a></td>
+                              <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration1\UpdateVM_Dallas_OpenStack_Dev59.html">BatchExecution</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration1\UpdateVM_Dallas_OpenStack_Dev59.html">UpdateVMScenario</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration1\UpdateVM_Dallas_OpenStack_Dev59.html">Test Method</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration1\UpdateVM_Dallas_OpenStack_Dev59.html">UpdateVM_Dallas_OpenStack_Dev59</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration1\UpdateVM_Dallas_OpenStack_Dev59.html">1</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration1\UpdateVM_Dallas_OpenStack_Dev59.html">318 Sec</a></td>
                                 <td><img  style="border: none;width: 25px" src="../../HTML_Design_Files/IMG/fail.png"></td>
                             </tr>
+                            <tr class="all fail atuSuiteNameMapper1">
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration2\UpdateVM_Dallas_OpenStack_Prod32.html">Default suite</a></td>
+                              <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration2\UpdateVM_Dallas_OpenStack_Prod32.html">BatchExecution</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration2\UpdateVM_Dallas_OpenStack_Prod32.html">UpdateVMScenario</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration2\UpdateVM_Dallas_OpenStack_Prod32.html">Test Method</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration2\UpdateVM_Dallas_OpenStack_Prod32.html">UpdateVM_Dallas_OpenStack_Prod32</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration2\UpdateVM_Dallas_OpenStack_Prod32.html">2</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration2\UpdateVM_Dallas_OpenStack_Prod32.html">167 Milli Sec</a></td>
+                                <td><img  style="border: none;width: 25px" src="../../HTML_Design_Files/IMG/fail.png"></td>
+                            </tr>
+                        </table>
+                    </div>
+                </td>
+            </tr>            <tr id="footer">
+                <td colspan="2">
+                    Best Viewed in &nbsp;
+                    <a href="http://www.mozilla.org/en-US/firefox/new/">Firefox</a> &nbsp;
+                    <a href="http://www.apple.com/in/safari/">Safari</a>&nbsp;
+                    <a href="http://www.google.com/chrome/">Chrome</a>&nbsp;
+                    <a href="http://windows.microsoft.com/en-IN/internet-explorer/download-ie">IE 9 & Above</a>&nbsp;
+                    &nbsp;
+ATU Reporter Version: v5.5 BETA                    &nbsp;
+                    Reports by: <a href="http://automationtestingutilities.blogspot.in/">Automation Testing Utilities</a>
+                </td>
+            </tr>
+        </table>
+    </body>
+</html>
