--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -43,4 +43,177 @@
 <tr><td>STEP43</td></tr>
 <tr><td>STEP44</td></tr>
 <tr><td>STEP45</td></tr>
+<tr><td>STEP46</td></tr>
+<tr><td>STEP47</td></tr>
+<tr><td>STEP48</td></tr>
+<tr><td>STEP49</td></tr>
+<tr><td>STEP50</td></tr>
+<tr><td>STEP51</td></tr>
+<tr><td>STEP52</td></tr>
+<tr><td>STEP53</td></tr>
+<tr><td>STEP54</td></tr>
+<tr><td>STEP55</td></tr>
+<tr><td>STEP56</td></tr>
+<tr><td>STEP57</td></tr>
+<tr><td>STEP58</td></tr>
+<tr><td>STEP59</td></tr>
+<tr><td>STEP60</td></tr>
+<tr><td>STEP61</td></tr>
+<tr><td>STEP62</td></tr>
+<tr><td>STEP63</td></tr>
+<tr><td>STEP64</td></tr>
+<tr><td>STEP65</td></tr>
+<tr><td>STEP66</td></tr>
+<tr><td>STEP67</td></tr>
+<tr><td>STEP68</td></tr>
+<tr><td>STEP69</td></tr>
+<tr><td>STEP70</td></tr>
+<tr><td>STEP71</td></tr>
+<tr><td>STEP72</td></tr>
+<tr><td>STEP73</td></tr>
+<tr><td>STEP74</td></tr>
+<tr><td>STEP75</td></tr>
+<tr><td>STEP76</td></tr>
+<tr><td>STEP77</td></tr>
+<tr><td>STEP78</td></tr>
+<tr><td>STEP79</td></tr>
+<tr><td>STEP80</td></tr>
+<tr><td>STEP81</td></tr>
+<tr><td>STEP82</td></tr>
+<tr><td>STEP83</td></tr>
+<tr><td>STEP84</td></tr>
+<tr><td>STEP85</td></tr>
+<tr><td>STEP86</td></tr>
+<tr><td>STEP87</td></tr>
+<tr><td>STEP88</td></tr>
+<tr><td>STEP89</td></tr>
+<tr><td>STEP90</td></tr>
+<tr><td>STEP91</td></tr>
+<tr><td>STEP92</td></tr>
+<tr><td>STEP93</td></tr>
+<tr><td>STEP94</td></tr>
+<tr><td>STEP95</td></tr>
+<tr><td>STEP96</td></tr>
+<tr><td>STEP97</td></tr>
+<tr><td>STEP98</td></tr>
+<tr><td>STEP99</td></tr>
+<tr><td>STEP100</td></tr>
+<tr><td>STEP101</td></tr>
+<tr><td>STEP102</td></tr>
+<tr><td>STEP103</td></tr>
+<tr><td>STEP104</td></tr>
+<tr><td>STEP105</td></tr>
+<tr><td>STEP106</td></tr>
+<tr><td>STEP107</td></tr>
+<tr><td>STEP108</td></tr>
+<tr><td>STEP109</td></tr>
+<tr><td>STEP110</td></tr>
+<tr><td>STEP111</td></tr>
+<tr><td>STEP112</td></tr>
+<tr><td>STEP113</td></tr>
+<tr><td>STEP114</td></tr>
+<tr><td>STEP115</td></tr>
+<tr><td>STEP116</td></tr>
+<tr><td>STEP117</td></tr>
+<tr><td>STEP118</td></tr>
+<tr><td>STEP119</td></tr>
+<tr><td>STEP120</td></tr>
+<tr><td>STEP121</td></tr>
+<tr><td>STEP122</td></tr>
+<tr><td>STEP123</td></tr>
+<tr><td>STEP124</td></tr>
+<tr><td>STEP125</td></tr>
+<tr><td>STEP126</td></tr>
+<tr><td>STEP127</td></tr>
+<tr><td>STEP128</td></tr>
+<tr><td>STEP129</td></tr>
+<tr><td>STEP130</td></tr>
+<tr><td>STEP131</td></tr>
+<tr><td>STEP132</td></tr>
+<tr><td>STEP133</td></tr>
+<tr><td>STEP134</td></tr>
+<tr><td>STEP135</td></tr>
+<tr><td>STEP136</td></tr>
+<tr><td>STEP137</td></tr>
+<tr><td>STEP138</td></tr>
+<tr><td>STEP139</td></tr>
+<tr><td>STEP140</td></tr>
+<tr><td>STEP141</td></tr>
+<tr><td>STEP142</td></tr>
+<tr><td>STEP143</td></tr>
+<tr><td>STEP144</td></tr>
+<tr><td>STEP145</td></tr>
+<tr><td>STEP146</td></tr>
+<tr><td>STEP147</td></tr>
+<tr><td>STEP148</td></tr>
+<tr><td>STEP149</td></tr>
+<tr><td>STEP150</td></tr>
+<tr><td>STEP151</td></tr>
+<tr><td>STEP152</td></tr>
+<tr><td>STEP153</td></tr>
+<tr><td>STEP154</td></tr>
+<tr><td>STEP155</td></tr>
+<tr><td>STEP156</td></tr>
+<tr><td>STEP157</td></tr>
+<tr><td>STEP158</td></tr>
+<tr><td>STEP159</td></tr>
+<tr><td>STEP160</td></tr>
+<tr><td>STEP161</td></tr>
+<tr><td>STEP162</td></tr>
+<tr><td>STEP163</td></tr>
+<tr><td>STEP164</td></tr>
+<tr><td>STEP165</td></tr>
+<tr><td>STEP166</td></tr>
+<tr><td>STEP167</td></tr>
+<tr><td>STEP168</td></tr>
+<tr><td>STEP169</td></tr>
+<tr><td>STEP170</td></tr>
+<tr><td>STEP171</td></tr>
+<tr><td>STEP172</td></tr>
+<tr><td>STEP173</td></tr>
+<tr><td>STEP174</td></tr>
+<tr><td>STEP175</td></tr>
+<tr><td>STEP176</td></tr>
+<tr><td>STEP177</td></tr>
+<tr><td>STEP178</td></tr>
+<tr><td>STEP179</td></tr>
+<tr><td>STEP180</td></tr>
+<tr><td>STEP181</td></tr>
+<tr><td>STEP182</td></tr>
+<tr><td>STEP183</td></tr>
+<tr><td>STEP184</td></tr>
+<tr><td>STEP185</td></tr>
+<tr><td>STEP186</td></tr>
+<tr><td>STEP187</td></tr>
+<tr><td>STEP188</td></tr>
+<tr><td>STEP189</td></tr>
+<tr><td>STEP190</td></tr>
+<tr><td>STEP191</td></tr>
+<tr><td>STEP192</td></tr>
+<tr><td>STEP193</td></tr>
+<tr><td>STEP194</td></tr>
+<tr><td>STEP195</td></tr>
+<tr><td>STEP196</td></tr>
+<tr><td>STEP197</td></tr>
+<tr><td>STEP198</td></tr>
+<tr><td>STEP199</td></tr>
+<tr><td>STEP200</td></tr>
+<tr><td>STEP201</td></tr>
+<tr><td>STEP202</td></tr>
+<tr><td>STEP203</td></tr>
+<tr><td>STEP204</td></tr>
+<tr><td>STEP205</td></tr>
+<tr><td>STEP206</td></tr>
+<tr><td>STEP207</td></tr>
+<tr><td>STEP208</td></tr>
+<tr><td>STEP209</td></tr>
+<tr><td>STEP210</td></tr>
+<tr><td>STEP211</td></tr>
+<tr><td>STEP212</td></tr>
+<tr><td>STEP213</td></tr>
+<tr><td>STEP214</td></tr>
+<tr><td>STEP215</td></tr>
+<tr><td>STEP216</td></tr>
+<tr><td>STEP217</td></tr>
+<tr><td>STEP218</td></tr>
 </table>
