--- a/ATUReports/Results/Run_7/CurrentRun.html
+++ b/ATUReports/Results/Run_7/CurrentRun.html
@@ -80,7 +80,7 @@ if($(this).val()=='tests'){ $('.pass').show(); $('.fail').show(); $('.skip').sho
 <td id="content">
                     <div class="info">
                         The following pie chart demonstrates the percentage of Passed, Failed and Skipped Test Cases<br/>
-                        Time Taken for Executing below Test Cases: <b>271 Sec</b> <br/>
+                        Time Taken for Executing below Test Cases: <b>777 Sec</b> <br/>
                         Current Run Number: <b>Run 7</b>
                     </div>
 <div class="info"><br/><b>Run Description</b><br/><br/>Here you can give description about the current Run</div>                    <div>
@@ -90,23 +90,23 @@ if($(this).val()=='tests'){ $('.pass').show(); $('.fail').show(); $('.skip').sho
                             <tr>
                                 <td>Execution Date</td>
                                 <td>&nbsp;&nbsp;:&nbsp;&nbsp;</td>
-                                <td>19-Jul-2017 11:26:22</td>
+                                <td>23-Jul-2017 10:03:15</td>
                             </tr>
                             <tr>
                                 <td>Total Test Cases</td>
                                 <td>&nbsp;&nbsp;:&nbsp;&nbsp;</td>
-                                <td>3</td>
+                                <td>10</td>
                             </tr>
                             <tr>
                                 <td>Passed</td>
                                 <td>&nbsp;&nbsp;:&nbsp;&nbsp;</td>
-                                <td>2</td>
+                                <td>10</td>
                             </tr>
                             
                             <tr>
                                 <td>Failed</td>
                                 <td>&nbsp;&nbsp;:&nbsp;&nbsp;</td>
-                                <td>1</td>
+                                <td>0</td>
                             </tr>
 
                             <tr>
@@ -158,24 +158,94 @@ if($(this).val()=='tests'){ $('.pass').show(); $('.fail').show(); $('.skip').sho
                                 <td><img  style="border: none; width: 25px" src="../../HTML_Design_Files/IMG/pass.png"></td>
                             </tr>
                             <tr class="all pass atuSuiteNameMapper1">
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration1\UpdateVM_NewYork_Delete_VMWare_DEV63.html">Default suite</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration1\UpdateVM_NewYork_Delete_VMWare_DEV63.html">BatchExecution</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration1\UpdateVM_NewYork_Delete_VMWare_DEV63.html">UpdateVMScenario</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration1\UpdateVM_NewYork_Delete_VMWare_DEV63.html">Test Method</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration1\UpdateVM_NewYork_Delete_VMWare_DEV63.html">UpdateVM_NewYork_Delete_VMWare_DEV63</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration1\UpdateVM_NewYork_Delete_VMWare_DEV63.html">1</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration1\UpdateVM_NewYork_Delete_VMWare_DEV63.html">99 Sec</a></td>
+                                <td><img  style="border: none; width: 25px" src="../../HTML_Design_Files/IMG/pass.png"></td>
+                            </tr>
+                            <tr class="all pass atuSuiteNameMapper1">
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration2\UpdateVM_NewYork_Delete_VMWare_DEV59.html">Default suite</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration2\UpdateVM_NewYork_Delete_VMWare_DEV59.html">BatchExecution</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration2\UpdateVM_NewYork_Delete_VMWare_DEV59.html">UpdateVMScenario</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration2\UpdateVM_NewYork_Delete_VMWare_DEV59.html">Test Method</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration2\UpdateVM_NewYork_Delete_VMWare_DEV59.html">UpdateVM_NewYork_Delete_VMWare_DEV59</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration2\UpdateVM_NewYork_Delete_VMWare_DEV59.html">2</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration2\UpdateVM_NewYork_Delete_VMWare_DEV59.html">99 Sec</a></td>
+                                <td><img  style="border: none; width: 25px" src="../../HTML_Design_Files/IMG/pass.png"></td>
+                            </tr>
+                            <tr class="all pass atuSuiteNameMapper1">
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration3\UpdateVM_NewYork_Delete_VMWare_DEV91.html">Default suite</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration3\UpdateVM_NewYork_Delete_VMWare_DEV91.html">BatchExecution</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration3\UpdateVM_NewYork_Delete_VMWare_DEV91.html">UpdateVMScenario</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration3\UpdateVM_NewYork_Delete_VMWare_DEV91.html">Test Method</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration3\UpdateVM_NewYork_Delete_VMWare_DEV91.html">UpdateVM_NewYork_Delete_VMWare_DEV91</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration3\UpdateVM_NewYork_Delete_VMWare_DEV91.html">3</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration3\UpdateVM_NewYork_Delete_VMWare_DEV91.html">95 Sec</a></td>
+                                <td><img  style="border: none; width: 25px" src="../../HTML_Design_Files/IMG/pass.png"></td>
+                            </tr>
+                            <tr class="all pass atuSuiteNameMapper1">
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration4\UpdateVM_NewYork_Delete_VMWare_DEV13.html">Default suite</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration4\UpdateVM_NewYork_Delete_VMWare_DEV13.html">BatchExecution</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration4\UpdateVM_NewYork_Delete_VMWare_DEV13.html">UpdateVMScenario</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration4\UpdateVM_NewYork_Delete_VMWare_DEV13.html">Test Method</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration4\UpdateVM_NewYork_Delete_VMWare_DEV13.html">UpdateVM_NewYork_Delete_VMWare_DEV13</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration4\UpdateVM_NewYork_Delete_VMWare_DEV13.html">4</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration4\UpdateVM_NewYork_Delete_VMWare_DEV13.html">90 Sec</a></td>
+                                <td><img  style="border: none; width: 25px" src="../../HTML_Design_Files/IMG/pass.png"></td>
+                            </tr>
+                            <tr class="all pass atuSuiteNameMapper1">
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration5\UpdateVM_NewYork_Delete_VMWare_DEV83.html">Default suite</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration5\UpdateVM_NewYork_Delete_VMWare_DEV83.html">BatchExecution</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration5\UpdateVM_NewYork_Delete_VMWare_DEV83.html">UpdateVMScenario</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration5\UpdateVM_NewYork_Delete_VMWare_DEV83.html">Test Method</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration5\UpdateVM_NewYork_Delete_VMWare_DEV83.html">UpdateVM_NewYork_Delete_VMWare_DEV83</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration5\UpdateVM_NewYork_Delete_VMWare_DEV83.html">5</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration5\UpdateVM_NewYork_Delete_VMWare_DEV83.html">89 Sec</a></td>
+                                <td><img  style="border: none; width: 25px" src="../../HTML_Design_Files/IMG/pass.png"></td>
+                            </tr>
+                            <tr class="all pass atuSuiteNameMapper1">
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration6\UpdateVM_NewYork_Delete_VMWare_DEV84.html">Default suite</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration6\UpdateVM_NewYork_Delete_VMWare_DEV84.html">BatchExecution</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration6\UpdateVM_NewYork_Delete_VMWare_DEV84.html">UpdateVMScenario</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration6\UpdateVM_NewYork_Delete_VMWare_DEV84.html">Test Method</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration6\UpdateVM_NewYork_Delete_VMWare_DEV84.html">UpdateVM_NewYork_Delete_VMWare_DEV84</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration6\UpdateVM_NewYork_Delete_VMWare_DEV84.html">6</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration6\UpdateVM_NewYork_Delete_VMWare_DEV84.html">91 Sec</a></td>
+                                <td><img  style="border: none; width: 25px" src="../../HTML_Design_Files/IMG/pass.png"></td>
+                            </tr>
+                            <tr class="all pass atuSuiteNameMapper1">
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration7\UpdateVM_NewYork_Delete_VMWare_PRD30.html">Default suite</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration7\UpdateVM_NewYork_Delete_VMWare_PRD30.html">BatchExecution</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration7\UpdateVM_NewYork_Delete_VMWare_PRD30.html">UpdateVMScenario</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration7\UpdateVM_NewYork_Delete_VMWare_PRD30.html">Test Method</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration7\UpdateVM_NewYork_Delete_VMWare_PRD30.html">UpdateVM_NewYork_Delete_VMWare_PRD30</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration7\UpdateVM_NewYork_Delete_VMWare_PRD30.html">7</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration7\UpdateVM_NewYork_Delete_VMWare_PRD30.html">97 Sec</a></td>
+                                <td><img  style="border: none; width: 25px" src="../../HTML_Design_Files/IMG/pass.png"></td>
+                            </tr>
+                            <tr class="all pass atuSuiteNameMapper1">
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration8\UpdateVM_NewYork_Delete_VMWare_PRD32.html">Default suite</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration8\UpdateVM_NewYork_Delete_VMWare_PRD32.html">BatchExecution</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration8\UpdateVM_NewYork_Delete_VMWare_PRD32.html">UpdateVMScenario</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration8\UpdateVM_NewYork_Delete_VMWare_PRD32.html">Test Method</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration8\UpdateVM_NewYork_Delete_VMWare_PRD32.html">UpdateVM_NewYork_Delete_VMWare_PRD32</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration8\UpdateVM_NewYork_Delete_VMWare_PRD32.html">8</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration8\UpdateVM_NewYork_Delete_VMWare_PRD32.html">94 Sec</a></td>
+                                <td><img  style="border: none; width: 25px" src="../../HTML_Design_Files/IMG/pass.png"></td>
+                            </tr>
+                            <tr class="all pass atuSuiteNameMapper1">
                                 <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\cNetLogoutScenario_Iteration1\cNetLogoutScenario.html">Default suite</a></td>
                                 <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\cNetLogoutScenario_Iteration1\cNetLogoutScenario.html">BatchExecution</a></td>
                                 <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\cNetLogoutScenario_Iteration1\cNetLogoutScenario.html">UpdateVMScenario</a></td>
                                 <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\cNetLogoutScenario_Iteration1\cNetLogoutScenario.html">Test Method</a></td>
                                 <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\cNetLogoutScenario_Iteration1\cNetLogoutScenario.html">cNetLogoutScenario</a></td>
                                 <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\cNetLogoutScenario_Iteration1\cNetLogoutScenario.html">1</a></td>
-                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\cNetLogoutScenario_Iteration1\cNetLogoutScenario.html">69 Milli Sec</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\cNetLogoutScenario_Iteration1\cNetLogoutScenario.html">3 Sec</a></td>
                                 <td><img  style="border: none; width: 25px" src="../../HTML_Design_Files/IMG/pass.png"></td>
-                            </tr>
-                            <tr class="all fail atuSuiteNameMapper1">
-                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration1\UpdateVM_Dallas_OpenStack_Dev63.html">Default suite</a></td>
-                              <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration1\UpdateVM_Dallas_OpenStack_Dev63.html">BatchExecution</a></td>
-                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration1\UpdateVM_Dallas_OpenStack_Dev63.html">UpdateVMScenario</a></td>
-                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration1\UpdateVM_Dallas_OpenStack_Dev63.html">Test Method</a></td>
-                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration1\UpdateVM_Dallas_OpenStack_Dev63.html">UpdateVM_Dallas_OpenStack_Dev63</a></td>
-                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration1\UpdateVM_Dallas_OpenStack_Dev63.html">1</a></td>
-                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration1\UpdateVM_Dallas_OpenStack_Dev63.html">252 Sec</a></td>
-                                <td><img  style="border: none;width: 25px" src="../../HTML_Design_Files/IMG/fail.png"></td>
                             </tr>
                         </table>
                     </div>
