--- a/ATUReports/Results/ConsolidatedPage.html
+++ b/ATUReports/Results/ConsolidatedPage.html
@@ -131,7 +131,13 @@
  <li class="menuStyle"><a href="Run_24\CurrentRun.html" >Run 24 </a></li>
 
 
- <li style="padding-top: 4px;padding-bottom: 4px;"><a href="Run_25\CurrentRun.html" >Run 25 </a></li>
+ <li class="menuStyle"><a href="Run_25\CurrentRun.html" >Run 25 </a></li>
+
+
+ <li class="menuStyle"><a href="Run_26\CurrentRun.html" >Run 26 </a></li>
+
+
+ <li style="padding-top: 4px;padding-bottom: 4px;"><a href="Run_27\CurrentRun.html" >Run 27 </a></li>
 
 
                     </ul>
