--- a/ATUReports/Results/ConsolidatedPage.html
+++ b/ATUReports/Results/ConsolidatedPage.html
@@ -104,7 +104,13 @@
  <li class="menuStyle"><a href="Run_15\CurrentRun.html" >Run 15 </a></li>
 
 
- <li style="padding-top: 4px;padding-bottom: 4px;"><a href="Run_16\CurrentRun.html" >Run 16 </a></li>
+ <li class="menuStyle"><a href="Run_16\CurrentRun.html" >Run 16 </a></li>
+
+
+ <li class="menuStyle"><a href="Run_17\CurrentRun.html" >Run 17 </a></li>
+
+
+ <li style="padding-top: 4px;padding-bottom: 4px;"><a href="Run_18\CurrentRun.html" >Run 18 </a></li>
 
 
                     </ul>
