--- a/ATUReports/Results/ConsolidatedPage.html
+++ b/ATUReports/Results/ConsolidatedPage.html
@@ -113,7 +113,13 @@
  <li class="menuStyle"><a href="Run_18\CurrentRun.html" >Run 18 </a></li>
 
 
- <li style="padding-top: 4px;padding-bottom: 4px;"><a href="Run_19\CurrentRun.html" >Run 19 </a></li>
+ <li class="menuStyle"><a href="Run_19\CurrentRun.html" >Run 19 </a></li>
+
+
+ <li class="menuStyle"><a href="Run_20\CurrentRun.html" >Run 20 </a></li>
+
+
+ <li style="padding-top: 4px;padding-bottom: 4px;"><a href="Run_21\CurrentRun.html" >Run 21 </a></li>
 
 
                     </ul>
